[project]
name = "news-url-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "googlesearch-python>=1.3.0",
    "httpx[http2]>=0.28.1",
    "pdfkit>=1.0.0",
    "playwright>=1.56.0",
    "requests>=2.32.5",
]
